frontend/assets/styles/ant-design.less
@import '~ant-design-vue/dist/antd.less';

@primary-color: #4331E9;
@modal-body-padding: 0px;
@dropdown-selected-color: @text-color;
@border-width-base: 2px;

.anticon {
    vertical-align: 0.125em !important;
}

.ant-progress-circle-path {
    stroke: @primary-color !important;
}

.ant-message {
    top: 11px !important;
}

.ant-popover-inner {
    overflow: hidden;
}

